--- a/cppextremebsb/package.json
+++ b/cppextremebsb/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-slot": "^1.2.2",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.11.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
