--- a/cppextremebsb/package.json
+++ b/cppextremebsb/package.json
@@ -23,6 +23,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-scroll-parallax": "^3.4.5",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.2.0"
   },
