--- a/cppextremebsb/package.json
+++ b/cppextremebsb/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.2",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
